--- a/miacohome.com/Views/ProcessPage.cshtml
+++ b/miacohome.com/Views/ProcessPage.cshtml
@@ -1,7 +1,115 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage
 @{
-	Layout = "MasterPages.cshtml";
+    Layout = "MasterPages.cshtml";
 }
 
-@* the fun starts here *@
+@{
+    var currentNode = UmbracoContext.Current.PublishedContentRequest.PublishedContent;
+    var projects = currentNode.Children;
+}
+
+<body>
+    <!--Start Path-->
+    <div class="path" style="height: 45px;width:100%;border-bottom:0.5px solid rgba(0,0,0,0.23) ">
+        <div class="container-fluid" id="path" style="height:45px;width: 100%;margin-top:80px">
+            <div id="groupPath">
+                <ul style="list-style:none;margin-bottom: 6px;margin-left: -53px;">
+                    <li style="font-size:18px"><a href="/"><div style="color:black"><i class="fa fa-home"></i></div></a></li>
+                    <li style="font-size:18px;margin-left: -7px;"><a href="#"><div><i class="fa fa-angle-right"></i></div></a></li>
+                    <li style="font-size:18px;margin-left: -7px;padding-top: 0;"><a href="@currentNode.Url"><p>PROCESS</p></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!--End Path-->
+    <!--Content-->
+    <div class="container-fluid">
+        <div id="content" class="text-center">
+            <div id=" titleStepProcess">
+                <div>
+                    <div class="text-center" style="display: inline-block;position:  relative;background-color:  white;margin-top: 35px;">
+                        <h2>OUR FOUR STEP PROCESS</h2>
+                    </div>
+                    <!--doubleHR-->
+                    <div style="width:100%;height:1px;border-bottom: 1px solid #f0f0f0;margin-top: -29px;display: inherit;">
+                        <div style="width:100%;height:1px;border-bottom:  1px solid #f0f0f0;display: inherit;padding-top: 3px;"></div>
+                    </div>
+                </div>
+                <div class="clearfix text-center" style="margin-top: 35px;"></div>
+
+                <p style="text-align: center;font-size: 14px;word-spacing: 0.7px;font-style: italic;margin-left: 100px;">Any happy design relationship has a great <a href="/" style="color:black;text-transform:lowercase">design</a> process behind it.</p>
+            </div>
+            <div id="StepProcess01" class="text-center">
+                <h2 style="margin: 0 auto 0.313em !important">
+                    <span>
+                        <h1 class="step">
+                            <i>1</i>
+                            INITIAL VISIT
+                        </h1>
+                    </span>
+                </h2>
+                <p>Every home is unique. We’ll come round, take measurements, and listen to what you want to achieve.</p>
+                <img src="~/images/steps01.jpg" />
+            </div>
+            <!--hr-->
+            <div style="background-color:#eee; width:1200px; height:1px; margin:0 auto;margin-top:30px"></div>
+            <!--hr-->
+            <div id="StepProcess02" class="text-center">
+                <h2 style="margin: 0 auto 0.313em !important">
+                    <span>
+                        <h1 class="step">
+                            <i>2</i>
+                            DESIGN CONCEPTT
+                        </h1>
+                    </span>
+                </h2>
+                <p>
+                    We believe in a tailored approach that suits your needs.
+                    Our proposal will consider your style preferences to find the best design for you
+                </p>
+                <img src="~/images/steps02.jpg" />
+            </div>
+            <!--hr-->
+            <div style="background-color:#eee; width:1200px; height:1px; margin:0 auto;margin-top:30px"></div>
+            <!--hr-->
+            <div id="StepProcess03" class="text-center">
+                <h2 style="margin: 0 auto 0.313em !important">
+                    <span>
+                        <h1 class="step">
+                            <i>3</i>
+                            2D AND/OR 3D DRAWING
+                        </h1>
+                    </span>
+                </h2>
+                <p>
+                    We will match our bespoke design concept to your measurement requirements
+                </p>
+                <img src="~/images/step0301.jpg" />
+                <p>
+                    and create your room visualisation.
+                </p>
+                <img src="~/images/step0302.jpg" />
+            </div>
+            <!--hr-->
+            <div style="background-color:#eee; width:1200px; height:1px; margin:0 auto;margin-top:30px"></div>
+            <!--hr-->
+            <div id="StepProcess04">
+                <h2 style="margin: 0 auto 0.313em !important">
+                    <span>
+                        <h1 class="step">
+                            <i>4</i>
+                            SHOPPING LIST
+                        </h1>
+                    </span>
+                </h2>
+                <p>
+                    Once your design concept and drawings are ready we will consolidate your shopping list.
+                </p>
+                <img src="~/images/step04.jpg" />
+            </div>
+        </div>
+        <!--the end Content-->
+
+</body>
+
 
