--- a/miacohome.com/Views/AboutUSPage.cshtml
+++ b/miacohome.com/Views/AboutUSPage.cshtml
@@ -1,7 +1,53 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage
 @{
-	Layout = "MasterPages.cshtml";
+    Layout = "MasterPages.cshtml";
+}
+@{
+    var rootNode = Umbraco.TypedContentAtRoot();
+    var aboutItem = rootNode.DescendantsOrSelf("aBOUTUS").First();
 }
 
-@* the fun starts here *@
+<body>
+
+    <!--Start Path-->
+    <div class="path" style="height: 45px;width:100%;border-bottom:0.5px solid rgba(0,0,0,0.23) ">
+        <div class="container-fluid" id="path" style="height:45px;width: 100%;margin-top:80px">
+            <div id="groupPath">
+                <ul style="list-style:none;margin-bottom: 6px;margin-left: -53px;">
+                    <li style="font-size:18px"><a href="/"><div style="color:black"><i class="fa fa-home"></i></div></a></li>
+                    <li style="font-size:18px;margin-left: -7px;"><a href="#"><div><i class="fa fa-angle-right"></i></div></a></li>
+                    <li style="font-size:18px;margin-left: -7px;padding-top: 0;"><a href="@aboutItem.Url"><p>AboutUs</p></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!--End Path-->
+    <!--StartContent-->
+    <div id="content" class="container">
+        <div class="text-center" style="display: inline-block;position:  relative;background-color:  white;margin-top: 35px;">
+            <span><h1 style="text-align:center">Personalised Expert Design Service for Everyone</h1></span>
+        </div>
+        <!--doubleHR-->
+        <div style="width:100%;height:1px;border-bottom: 1px solid #f0f0f0;margin-top: -40px;display: inherit;">
+            <div style="width:100%;height:1px;border-bottom:  1px solid #f0f0f0;display: inherit;padding-top: 3px;"></div>
+        </div>
+        <div class="clearfix"></div>
+        <!--doubleHR-->
+        <!--Content01-->
+        <div class="entry-content content">
+            <div class="x-selection" style="margin: 0px;padding: 0px 0px;background-color: transparent;">
+                <div>
+                    <div class="container max width">
+                        @Html.Raw((aboutItem.GetPropertyValue<string>("aboutUsItem")))
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+    <!--EndContent-->
+
+</body>
+
 
