--- a/miacohome.com/Views/Blog_item.cshtml
+++ b/miacohome.com/Views/Blog_item.cshtml
@@ -1,7 +1,176 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage
 @{
-	Layout = "MasterPages.cshtml";
+    Layout = "MasterPages.cshtml";
 }
 
-@* the fun starts here *@
+@{
+    <!--lay data tu Umbraco-->
+    var rootNode = Umbraco.TypedContentAtRoot();
+    var Blog = rootNode.DescendantsOrSelf("bLOG").First();
+    var currentNode = UmbracoContext.Current.PublishedContentRequest.PublishedContent;
+    var thumbnail = currentNode.GetPropertyValue<string>("thumbnail").Split(new char[] { ',' }, StringSplitOptions.RemoveEmptyEntries);
+}
+<body>
+
+    <!--start path-->
+    <div class="path" style="height: 45px;width:100%;border-bottom:0.5px solid rgba(0,0,0,0.23) ">
+        <div class="container-fluid" id="path" style="height:45px;width: 100%;margin-top:80px">
+            <div id="groupPath">
+                <ul style="list-style:none;margin-bottom: 6px;margin-left: -53px;">
+                    <li style="font-size:18px"><a href="/"><div style="color:black"><i class="fa fa-home"></i></div></a></li>
+                    <li style="font-size:18px;margin-left: -7px;"><a href="#"><div><i class="fa fa-angle-right"></i></div></a></li>
+                    <li style="font-size:18px;margin-left: -7px;padding-top: 0;"><a href="@Blog.Url"><p>BLOG</p></a></li>
+                    <li style="font-size:18px;margin-left: -7px;"><a href="#"><div><i class="fa fa-angle-right"></i></div></a></li>
+                    <li style="font-size:18px;margin-left: -7px;padding-top: 0;"><p style="font-size: 12px;margin-top: 6px;">@currentNode.Name</p></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <!--End Path-->
+    <div class="clearfix"></div>
+    <!--left-->
+    <div class="main left" role="main" style="margin-top: 50px;margin-left: 5px;">
+        <article class="hentry has-post-thumbnail">
+            <div class="entry-featured">
+                @foreach (var id in thumbnail)
+                {
+                    var image = Umbraco.TypedMedia(id);
+                    var url = String.Empty;
+                    if (image != null)
+                    {
+                        url = image.Url;
+                    }
+                    <div class="entry-thumb">
+                        <img style="width:881px;height:587px" src="@url" alt="empty" />
+                    </div>
+                }
+
+            </div>
+            <div class="entry-wrap">
+                <header class="entry-header" style="padding-top: 50px;padding-left: 50px;">
+                    <h1 class="entry-title">@currentNode.Name</h1>
+                </header>
+                <div class="entry-content content">
+                    <div class="cs-conten">
+                        <div class="x-selection" style="margin: 0px;padding: 45px 0px;background-color: transparent;">
+                            <div class="container max width" style="margin: 0px auto;padding: 0px;">
+                                @Html.Raw((currentNode.GetPropertyValue<string>("description")))
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </article>
+        <!--Comment-->
+        <div id="comments" class="comment-area">
+            <div id="respond" class="comment-repond">
+                <h3 id="reply-title" class="comment-reply-title">
+                    Leave a Reply
+                </h3>
+                <form action="" method="post" id="commentform" class="comment-form">
+                    <p class="comment-notes" style="font-style: italic;margin-left: 20px;">
+                        <span id="email-note">
+                            Your email address will not be published.
+                        </span>
+                        Required fields are marked
+                        <span class="required">*</span>
+                    </p>
+                    <p class="comment-form-comment">
+                        <label for="comment">Comment</label>
+                        <textarea id="comment" name="comment" cols="45" rows="8" maxlength="65525" aria-required="true" required></textarea>
+                    </p>
+                    <p class="comment-form-author">
+                        <label for="author">
+                            Name
+                            <span class="required">*</span>
+                        </label>
+                        <input id="author" name="author" type="text" size="30" maxlength="245" aria-required="true" required />
+                    </p>
+                    <p class="comment-form-email">
+                        <label for="email">
+                            Email
+                            <span class="required">*</span>
+                        </label>
+                        <input id="email" name="email" type="text" size="30" maxlength="245" aria-describedby="email-notes" aria-required="true" required />
+                    </p>
+                    <p class="form-submit">
+                        <input name="submit" type="submit" id="entry-comment-submit" class="submit" value="Submit" />
+
+                    </p>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!--right-->
+    <aside class="sidebar right" role="complementary" style="margin-top: 50px;margin-left: 4px;">
+        <div id="categories-2" class="widget widget_categories">
+            <p><h4 class="h-widget"><i class="fa fa-bookmark"></i> CATEGORIES</h4></p>
+            <ul>
+                <li><a>Checklists</a></li>
+                <li><a>Design Hotels</a></li>
+                <li><a>Eclectic House of the Month</a></li>
+                <li><a>Fashion</a></li>
+                <li><a>Guides</a></li>
+                <li><a>Home Improvement Advice</a></li>
+                <li><a>Inspiration</a></li>
+                <li><a>Interior Designs</a></li>
+                <li><a>Sundry</a></li>
+            </ul>
+        </div>
+        <div id="recent-posts" class="widget widget_recent_entries">
+            <p><h4 class="h-widget"><i class="fa fa-book"></i> RECENT POSTS</h4></p>
+            <ul>
+                <li><a href="">INSPIRATION FROM TRAVEL. MOLDOVA, CHISINAU</a></li>
+                <li><a href="">WHY KIDS ROOMS ARE NOT EASY TO DECORATE</a></li>
+                <li><a href="">GET CLARITY ON WHAT YOUR IDEAL HOME SHOULD LOOK LIKE</a></li>
+                <li><a href="">GET PIECE OF MIND BEFORE STARTING YOUR HOME REFURBISHMENT PROJECT</a></li>
+                <li><a href="">DETERMINING GOALS BEFORE BEGINNING YOUR HOME REFURBISHMENT</a></li>
+                <li><a href="">FOUR MISTAKES BUSY FAMILIES MAKE WHEN PREPARING FOR THEIR HOME IMPROVEMENT</a></li>
+            </ul>
+        </div>
+        <div>
+            <p><h4><i class="fa fa-tags"></i>TAGS</h4></p>
+        </div>
+        <div class="tag-cloud">
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="antique (1 item)"><i class="fa fa-tag"></i>antique</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="art (1 item)"><i class="fa fa-tag"></i>art</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="artist (1 item)"><i class="fa fa-tag"></i>artist</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="Barceló Torre de (1 item)"><i class="fa fa-tag"></i>Barceló Torre de</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="collection (1 item)"><i class="fa fa-tag"></i>collection</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="costumes (1 item)"><i class="fa fa-tag"></i>costumes</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="Decor advice (1 item)"><i class="fa fa-tag"></i>Decor advice</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="design (1 item)"><i class="fa fa-tag"></i>design</a>
+            <a href="" style="font-size:22px" class="tag-cloud" aria-label="eclectic (2 items)"><i class="fa fa-tag"></i>eclectic</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="eclectic house of the month (1 item)"><i class="fa fa-tag"></i>eclectic house of the month</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="fabrics (1 item)"><i class="fa fa-tag"></i>fabrics</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="fashion (1 item)"><i class="fa fa-tag"></i>fashion</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="gucci (1 item)"><i class="fa fa-tag"></i>gucci</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="home improvement advice (1 item)"><i class="fa fa-tag"></i>home improvement advice</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="hotel (1 item)"><i class="fa fa-tag"></i>hotel</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="house (1 item)"><i class="fa fa-tag"></i>house</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="interior design (1 item)"><i class="fa fa-tag"></i>interior design</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="interior design for kids (1 item)"><i class="fa fa-tag"></i>interior design for kids</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="Jaime Hayon (1 item)"><i class="fa fa-tag"></i>Jaime Hayon</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="kids rooms decoration (1 item)"><i class="fa fa-tag"></i>kids rooms decoration</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="madrid (1 item)"><i class="fa fa-tag"></i>madrid</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="nick cave (1 item)"><i class="fa fa-tag"></i>nick cave</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="pre-fall 2017 (1 item)"><i class="fa fa-tag"></i>pre-fall 2017</a>
+            <a href="" style="font-size:8px" class="tag-cloud" aria-label="soundsuits (1 item)"><i class="fa fa-tag"></i>soundsuits</a>
+
+        </div>
+        <div id="text-2" class="widget widget_text">
+            <div class="textwidget">
+                <a href="">
+                    <img src="~/images/portfolio.jpg" alt="View some of our previous successes" />
+                </a>
+            </div>
+        </div>
+        <div>
+            <p><h4 class="h-widget"><i class="fa fa-chevron-right"></i> ADSENSE</h4></p>
+        </div>
+    </aside>
+    <!--the end right-->
+</body>
 
