--- a/miacohome.com/Views/HomePage.cshtml
+++ b/miacohome.com/Views/HomePage.cshtml
@@ -133,6 +133,7 @@
     transition: margin-bottom 0.6s ease,opacity 0.3s ease;">
     <i class="fa fa-angle-up"></i>
 </a>
+<br />
 <!-- Start ROOM DESIGN PACKAGES-->
 <div id="DESIGN PACKAGES" class="body" style="height:800px;width:auto">
     <div style="width:1200px;height:732.38px;margin:0 auto">
@@ -212,10 +213,10 @@
                     <li class="@(BloghotItems.IndexOf(item) % 3 == 1 ? "center" : "")">
                         <a style="opacity:1" href="@item.Url">
 
-                            <div class="entry-wrap" style="width:35%;height:296.77px">
+                            <div class="entry-wrap" style="width:35%;height:auto">
                                 <div class="x-recent-posts-img" style="width:100%"><img src="@url" /></div>
                                 <div class="x-recent-posts-content center-text" style="font-size:18px;color:black;height: 108px;padding-top: 10px;">
-                                    <h1 class="h-recent-posts" style=" font-size: 18px;padding-bottom: 10px;padding-left: 5px;padding-right: 3px;">@item.Name</h1>
+                                    <h1 class="h-recent-posts" style=" font-size: 16px;padding-bottom: 10px;padding-left: 5px;padding-right: 3px;">@item.Name</h1>
                                 </div>
                             </div>
 
